--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </p>
     <![endif]-->
 
-    <div class="flex flex-col">
+    <div class="min-h-screen flex flex-col">
       <div class="sticky top-0">
         <div
           class="main-nav sticky top-0 visible backdrop-blur-md text-white p-6"
