--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
           class="main-nav sticky top-0 visible backdrop-blur-md text-white p-6"
         >
           <div class="flex justify-between">
-            <div><a href="index.html">boris svoboda / showroom</a></div>
             <div>
-              <a href="contact.html"> contacts </a>
+              <a href="https://borissvoboda.github.io/showroom/index.html"
+                >boris svoboda / showroom</a
+              >
+            </div>
+            <div>
+              <a href="https://borissvoboda.github.io/showroom/contact.html">
+                contacts
+              </a>
             </div>
           </div>
         </div>
