--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 class="underline"
                 href="https://open.spotify.com/album/0TCirA0sMa7z0OxHnE7Oe5"
               >
-                Cover for the musical album Opus0 by Adam Hudec
+                Cover for the album Opus0 by Adam Hudec
               </a>
             </div>
           </div>
